--- a/morin_draft.Rmd
+++ b/morin_draft.Rmd
@@ -134,4 +134,113 @@ grid.arrange(a, b, nrow = 1)
 
 For exploratory purposes, I compare the proportion of employees that left another agency to work for Environmental Protection Agency (EPA) and the Federal Student Aid Agency (FSA) as well the proportion of employees that left the agencies to work elsewhere in the federal government (See Figure 1). In proportion terms, the proportion that left the EPA are somewhat small. For example, in 2012, 48 employees left the EPA to work at another agency which is relatively low compared to the 18,045 employees that were on the payroll that year. Moreover, there are distinctly different patterns. There is a small period between 1984 and 1990 where the EPA was absorbing more employees than it was losing. In contrast, FSA consistently absorbed employees for most of the years. 
 
+```{r}
+
+########### Data Cleaning
+
+df = ref %>%
+  filter(yr != 1973) %>%
+  filter(yr >= 1974) %>%
+  filter(yr < 2014) %>% 
+  filter(med_sal_ > 0) %>% 
+  filter(n > 5000) %>%
+  drop_na(med_sal_) %>%
+  filter(AGYSUB != "TOTL")%>%
+  filter(agy_full != "Dept. of Veterans Affairs") %>%
+  filter(!grepl("NET", agy_full))
+
+years = seq(1980,1990, by = 1)
+
+addon = df %>%
+  select(agy_full, med_sal_, agy_typ, AGYSUB, yr, n) %>%
+  filter(yr == years[length(years)])
+
+res = df %>%
+  filter(yr %in% years) %>%
+  group_by(agy_full) %>%
+  summarise(ma_diff = ma_pct[which.max(yr)] - ma_pct[which.min(yr)],
+            phd_diff = doc_pct[which.max(yr)] - doc_pct[which.min(yr)],
+            budget_diff = (b18_roll[which.max(yr)] - b18_roll[which.min(yr)]) / b18_roll[which.min(yr)],
+            dbudget_diff = (b18_d_roll[which.max(yr)] - b18_d_roll[which.min(yr)]) / b18_d_roll[which.min(yr)],
+            nyear = n()) %>%
+  ungroup() %>%
+  filter(nyear == length(years))
+
+fres = res %>%
+  left_join(addon)
+
+
+####################################################
+#### NODES
+######################################
+#### Data Cleaning
+df = fed %>%
+  filter(yr == 1990) %>%
+  filter(n_nextpct <= .5)
+
+
+#### Make nodes
+sources = df %>%
+  distinct(AGYSUB) %>%
+  rename(label = AGYSUB)
+
+destinations = df %>%
+  distinct(label = AGYSUB_next)
+
+nodes = full_join(sources, destinations, by = "label")
+
+nodes = fres %>%
+  left_join(nodes, by = c("AGYSUB" = "label"))
+
+nodes = nodes %>%
+  rowid_to_column("id")
+
+
+###################################3
+#### Make edges
+#######################
+
+
+agy_set = expand.grid(unique(df$AGYSUB), unique(df$AGYSUB_next))
+
+agy_set = agy_set %>%
+  filter(as.character(Var1) != as.character(Var2)) %>%
+  rename(AGYSUB = Var1, AGYSUB_next = Var2)
+
+df2 = agy_set %>%
+  left_join(df) %>%
+  mutate(connected = ifelse(n_nextpct >= .05, 1, 0))
+
+df2$connected = replace_na(df2$connected, 0)
+
+df2 = df2 %>%
+  select(AGYSUB, AGYSUB_next, connected) %>%
+  filter(connected == 1) %>%
+  filter(AGYSUB %in% nodes$AGYSUB & AGYSUB_next %in% nodes$AGYSUB)
+
+nodes = nodes %>%
+  filter(AGYSUB %in% df2$AGYSUB | AGYSUB %in% df2$AGYSUB_next)
+
+#### Make network
+
+fednetwork = network(df2, vertex.attr = nodes, matrix.type = "edgelist")
+
+library(igraph)
+library(tidygraph)
+library(ggraph)
+
+nodes = nodes %>%
+  relocate(AGYSUB)
+
+net = graph.data.frame(d = df2, vertices = nodes, directed = TRUE)
+net.tidy = as_tbl_graph(net)
+
+ggraph(net.tidy) + 
+  geom_edge_link(color = "grey", alpha = .6) + 
+  geom_node_point(aes(color = agy_typ, size = log(n))) +
+  theme_graph() +
+  scale_size(guide = "none") 
+
+```
+
 # References
