--- a/morin_draft.Rmd
+++ b/morin_draft.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Employment Network of Federal Agencies"
 author: "Blain Morin"
-date: "4/10/2021"
+date: "4/30/2021"
 header-includes:
 - \usepackage{pdflscape}
 - \usepackage{float}
@@ -53,8 +53,6 @@ This paper is mostly descriptive in that I examine some observational factors th
 # Data
 
 The data come from a Buzzfeed News Freedom of Information Act (FOI) request. It contains four decades of payroll data from the U.S. Office of Personnel Management. From 1973 to 2013, the data are uniquely identified. This allows us to track employees flowing in and out of federal employment as well as flowing between agencies. It also includes variables such as employee salary, age, and education levels.
-
-{Insert Descriptive Table Around Here (with number of agencies, variable distributions, etc)}
 
 
 ```{r, fig.cap = "Flows in and Out of Two Federal Agencies"}
@@ -316,10 +314,10 @@ model2 = ergm(fednetwork ~ edges +
                 absdiff("med_sal_") +
                 mutual(), 
              control=control.ergm(
-               MCMC.samplesize=20000,
-               MCMC.burnin=50000,
+               MCMC.samplesize=10000,
+               MCMC.burnin=5000,
                MCMLE.maxit=10,
-               parallel = 4))
+               parallel = 2))
 
 ```
 
@@ -336,22 +334,357 @@ check2 = round(check$coefficients, 2) %>%
   relocate(Name)
 
  check2 %>%
-  kbl(caption = "ERGM Model", booktabs = T, linesep = "") %>%
+  kbl(caption = "ERGM Model 1", booktabs = T, linesep = "") %>%
    kable_styling(latex_options = c("striped", "hold_position"))
 
 ```
 
-The z values are suspiciously high. I need to figure out what is going on here.
+The z values are suspiciously high. 
+
+\newpage
+
+# Flow of Expertese
+
+```{r, fig.height = 8, fig.cap="Flow of Employees with PhDs"}
+
+fed = read_csv("r73_13_recoded_flows_PhD_or_higher.csv")
+
+fed = fed %>%
+    filter(AGYSUB_next != "EXIT") %>%
+    filter(AGYSUB_next != "UKNOWN")
+
+########### Data Cleaning
+
+df = ref %>%
+  filter(yr != 1973) %>%
+  filter(yr >= 1974) %>%
+  filter(yr < 2014) %>% 
+  filter(med_sal_ > 0) %>% 
+  filter(n > 5000) %>%
+  drop_na(med_sal_) %>%
+  filter(AGYSUB != "TOTL")%>%
+  filter(agy_full != "Dept. of Veterans Affairs") %>%
+  filter(!grepl("NET", agy_full))
+
+years = seq(1980,1990, by = 1)
+
+addon = df %>%
+  select(agy_full, med_sal_, agy_typ, AGYSUB, yr, n) %>%
+  filter(yr == years[length(years)])
+
+res = df %>%
+  filter(yr %in% years) %>%
+  group_by(agy_full) %>%
+  summarise(ma_diff = ma_pct[which.max(yr)] - ma_pct[which.min(yr)],
+            phd_diff = doc_pct[which.max(yr)] - doc_pct[which.min(yr)],
+            budget_diff = (b18_roll[which.max(yr)] - b18_roll[which.min(yr)]) / b18_roll[which.min(yr)],
+            dbudget_diff = (b18_d_roll[which.max(yr)] - b18_d_roll[which.min(yr)]) / b18_d_roll[which.min(yr)],
+            nyear = n()) %>%
+  ungroup() %>%
+  filter(nyear == length(years))
+
+fres = res %>%
+  left_join(addon)
+
+
+####################################################
+#### NODES
+######################################
+#### Data Cleaning
+df = fed %>%
+  filter(yr == 1990) 
+
+
+#### Make nodes
+sources = df %>%
+  distinct(AGYSUB) %>%
+  rename(label = AGYSUB)
+
+destinations = df %>%
+  distinct(label = AGYSUB_next)
+
+nodes = full_join(sources, destinations, by = "label")
+
+nodes = fres %>%
+  left_join(nodes, by = c("AGYSUB" = "label"))
+
+nodes = nodes %>%
+  rowid_to_column("id")
+
+
+###################################3
+#### Make edges
+#######################
+
+
+agy_set = expand.grid(unique(df$AGYSUB), unique(df$AGYSUB_next))
+
+agy_set = agy_set %>%
+  filter(as.character(Var1) != as.character(Var2)) %>%
+  rename(AGYSUB = Var1, AGYSUB_next = Var2)
+
+df2 = agy_set %>%
+  left_join(df) %>%
+  mutate(connected = ifelse(n_next >= 1, 1, 0))
+
+df2$connected = replace_na(df2$connected, 0)
+
+df2 = df2 %>%
+  select(AGYSUB, AGYSUB_next, connected) %>%
+  filter(connected == 1) %>%
+  filter(AGYSUB %in% nodes$AGYSUB & AGYSUB_next %in% nodes$AGYSUB)
+
+nodes = nodes %>%
+  filter(AGYSUB %in% df2$AGYSUB | AGYSUB %in% df2$AGYSUB_next)
+
+#### Make network
+
+fednetwork = network(df2, vertex.attr = nodes, matrix.type = "edgelist")
+
+library(igraph)
+library(tidygraph)
+library(ggraph)
+
+
+nodes = nodes %>%
+  relocate(AGYSUB)
+
+net = graph.data.frame(d = df2, vertices = nodes, directed = TRUE)
+net.tidy = as_tbl_graph(net)
+
+ggraph(net.tidy) + 
+  geom_edge_link( alpha = .6, width = 1, color = "grey", arrow = arrow(length = unit(3, 'mm')), 
+                   end_cap = circle(3, 'mm'))+ 
+  geom_node_point(aes(color = agy_typ, size = n), alpha = .8) +
+  theme_void() +
+  labs(color = "Agency Type") +
+  theme(legend.position="bottom") +
+  guides(color = guide_legend(ncol=2, byrow=FALSE)) +
+  scale_size(guide = "none") +
+  scale_size_continuous(range = c(4, 20), guide = "none") +
+  geom_node_text(aes(label = agy_full), repel=TRUE, size = 1.7)
+  
+
+```
+
+
+For another exploratory analysis, I filter the flows to only employees with PhDs. This network is displayed in Figure 3. In this network, there seems to be a bit more clustering by agency type. For example, we see some clusters forming between Natural Resources and Environment and General Science and Basic Research Agencies.  
+
+For expertise flows, the edges are the actual count of employees, not the proportion sent. To account for larger agencies having a higher chance of edge formation, I added added a weighted outdegree term.
+
+```{r}
+
+set.seed(442210)
+model3 = ergm(fednetwork ~ edges + 
+                nodeicov("budget_diff") + 
+                nodematch("agy_typ") + 
+                absdiff("med_sal_") +
+                nodeocov("n") +
+                gwodegree(decay = 1) +
+                mutual(), 
+             control=control.ergm(
+               MCMC.samplesize=100000,
+               MCMC.burnin=20000,
+               MCMLE.maxit=10,
+               parallel = 2))
+
+```
+
+```{r}
+
+check = summary(model3)
+
+check$coefficients[[1]][5] = check$coefficients[[1]][4] * 10000 
+
+check2 = round(check$coefficients, 2) %>%
+  mutate(expCoef = round(exp(Estimate), 2)) %>%
+  relocate(expCoef, .after = Estimate) %>%
+  mutate(Name = rownames(check$coefficients)) %>%
+  relocate(Name)
+
+ check2 %>%
+  kbl(caption = "ERGM Model 2: PhD Edges", booktabs = T, linesep = "") %>%
+   kable_styling(latex_options = c("striped", "hold_position"))
+
+```
+
+\newpage
+
+I also present the employment flow for employees with Master's degrees or higher in Figure 4. Again, we see some clustering with environmental agencies, which is likely due to specialization.  
+
+
+```{r, fig.height=8,fig.cap="Flow of Employees with Master's Degrees or Higher"}
+
+fed = read_csv("r73_13_recoded_flows_MA_or_higher.csv")
+
+fed = fed %>%
+    filter(AGYSUB_next != "EXIT") %>%
+    filter(AGYSUB_next != "UKNOWN")
+
+########### Data Cleaning
+
+df = ref %>%
+  filter(yr != 1973) %>%
+  filter(yr >= 1974) %>%
+  filter(yr < 2014) %>% 
+  filter(med_sal_ > 0) %>% 
+  filter(n > 5000) %>%
+  drop_na(med_sal_) %>%
+  filter(AGYSUB != "TOTL")%>%
+  filter(agy_full != "Dept. of Veterans Affairs") %>%
+  filter(!grepl("NET", agy_full))
+
+years = seq(1980,1990, by = 1)
+
+addon = df %>%
+  select(agy_full, med_sal_, agy_typ, AGYSUB, yr, n) %>%
+  filter(yr == years[length(years)])
+
+res = df %>%
+  filter(yr %in% years) %>%
+  group_by(agy_full) %>%
+  summarise(ma_diff = ma_pct[which.max(yr)] - ma_pct[which.min(yr)],
+            phd_diff = doc_pct[which.max(yr)] - doc_pct[which.min(yr)],
+            budget_diff = (b18_roll[which.max(yr)] - b18_roll[which.min(yr)]) / b18_roll[which.min(yr)],
+            dbudget_diff = (b18_d_roll[which.max(yr)] - b18_d_roll[which.min(yr)]) / b18_d_roll[which.min(yr)],
+            nyear = n()) %>%
+  ungroup() %>%
+  filter(nyear == length(years))
+
+fres = res %>%
+  left_join(addon)
+
+
+####################################################
+#### NODES
+######################################
+#### Data Cleaning
+df = fed %>%
+  filter(yr == 1990) 
+
+
+#### Make nodes
+sources = df %>%
+  distinct(AGYSUB) %>%
+  rename(label = AGYSUB)
+
+destinations = df %>%
+  distinct(label = AGYSUB_next)
+
+nodes = full_join(sources, destinations, by = "label")
+
+nodes = fres %>%
+  left_join(nodes, by = c("AGYSUB" = "label"))
+
+nodes = nodes %>%
+  rowid_to_column("id")
+
+
+###################################3
+#### Make edges
+#######################
+
+
+agy_set = expand.grid(unique(df$AGYSUB), unique(df$AGYSUB_next))
+
+agy_set = agy_set %>%
+  filter(as.character(Var1) != as.character(Var2)) %>%
+  rename(AGYSUB = Var1, AGYSUB_next = Var2)
+
+df2 = agy_set %>%
+  left_join(df) %>%
+  mutate(connected = ifelse(n_next >= 1, 1, 0))
+
+df2$connected = replace_na(df2$connected, 0)
+
+df2 = df2 %>%
+  select(AGYSUB, AGYSUB_next, connected) %>%
+  filter(connected == 1) %>%
+  filter(AGYSUB %in% nodes$AGYSUB & AGYSUB_next %in% nodes$AGYSUB)
+
+nodes = nodes %>%
+  filter(AGYSUB %in% df2$AGYSUB | AGYSUB %in% df2$AGYSUB_next)
+
+#### Make network
+
+fednetwork = network(df2, vertex.attr = nodes, matrix.type = "edgelist")
+
+library(igraph)
+library(tidygraph)
+library(ggraph)
+
+
+nodes = nodes %>%
+  relocate(AGYSUB)
+
+net = graph.data.frame(d = df2, vertices = nodes, directed = TRUE)
+net.tidy = as_tbl_graph(net)
+
+ggraph(net.tidy) + 
+  geom_edge_link( alpha = .5, width = 1, color = "grey")+ 
+  geom_node_point(aes(color = agy_typ, size = n), alpha = .8) +
+  theme_void() +
+  labs(color = "Agency Type") +
+  theme(legend.position="bottom") +
+  guides(color = guide_legend(ncol=2, byrow=FALSE)) +
+  scale_size(guide = "none") +
+  scale_size_continuous(range = c(4, 20), guide = "none") +
+  geom_node_text(aes(label = agy_full), repel=TRUE, size = 1.7)
+  
+
+```
+
+```{r}
+
+set.seed(442210)
+model4 = ergm(fednetwork ~ edges + 
+                nodeicov("budget_diff") + 
+                nodematch("agy_typ") + 
+                absdiff("med_sal_") +
+                nodeocov("n") +
+                gwodegree(decay = 1) +
+                mutual(), 
+             control=control.ergm(
+               MCMC.samplesize=100000,
+               MCMC.burnin=20000,
+               MCMLE.maxit=10,
+               parallel = 2))
+
+```
+
+```{r}
+
+check = summary(model4)
+
+check$coefficients[[1]][5] = check$coefficients[[1]][4] * 10000
+
+check2 = round(check$coefficients, 2) %>%
+  mutate(expCoef = round(exp(Estimate), 2)) %>%
+  relocate(expCoef, .after = Estimate) %>%
+  mutate(Name = rownames(check$coefficients)) %>%
+  relocate(Name)
+
+ check2 %>%
+  kbl(caption = "ERGM Model 3: Master's or Higher Edges", booktabs = T, linesep = "") %>%
+   kable_styling(latex_options = c("striped", "hold_position"))
+
+```
+
+\newpage
 
 # Discussion and Conclusion
 
 Work in progress.
+
+\newpage
 
 # References
 
 <div id="refs"></div>
 
 # Appendix: ERGM Diagnostics
+
+## ERMG Model 1
 
 ```{r, fig.height=6}
 
@@ -362,6 +695,33 @@ plot(gof2)
 
 ```
 
-![](chain4.PNG)
+\newpage
 
-![](chain3.PNG)
+## ERGM Model 2
+
+```{r, fig.height=6}
+
+gof2 = gof(model3)
+
+par(mfrow=c(3,2))
+plot(gof2)
+
+```
+
+\newpage
+
+## ERGM Model 3
+
+```{r, fig.height=6}
+
+gof2 = gof(model4)
+
+par(mfrow=c(3,2))
+plot(gof2)
+
+```
+
+# Appendix R code
+
+```{r ref.label=knitr::all_labels(), echo=TRUE, eval=FALSE}
+```
